# pal-monitor

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
src/: discord.rs  docker.rs  main.rs
